[project]
name = "pxwebpy"
version = "0.3.0"
description = "Get data from PxWeb API easily."
license = "MIT"
repository = "https://github.com/stefur/pxwebpy/"
keywords = ["pxweb", "statistics", "dataframes", "pandas", "polars"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
authors = [
    { name = "stefur", email = "stefan@furne.net" }
]
dependencies = [
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.urls]
"Issue tracker" = "https://github.com/stefur/pxwebpy/issues"

[project.optional-dependencies]
ci = [
    "pytest>=8.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "types-requests>=2.32.0.20240602",
    "polars>=0.20.7",
    "pandas>=2.2.0",
    "pandas-stubs>=2.1.4.231227",
    "pytest>=8.2.0",
    "ipykernel>=6.29.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pxwebpy"]
