[project]
name = "pxwebpy"
dynamic = ["version"]
description = "Client library for the PxWeb API to easily load data into a DataFrame."
license = "MIT"
repository = "https://github.com/stefur/pxwebpy/"
keywords = ["pxweb", "statistics", "dataframes", "pandas", "polars"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
authors = [
    { name = "Stefan Furne", email = "stefan@furne.net" }
]
dependencies = [
    "requests>=2.32.3",
    "requests-cache>=1.2.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.urls]
Repository = "https://github.com/stefur/pxwebpy"
Documentation = "https://stefur.github.io/pxwebpy"

[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "versioningit"

[tool.hatch.build]
artifacts = ["src/pxweb/_version.py"]

[tool.hatch.build.targets.wheel]
packages = ["src/pxweb"]

[tool.versioningit.write]
file = "src/pxweb/_version.py"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.2.240807",
    "polars>=1.19.0",
    "pyarrow>=21.0.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.2.1",
    "quartodoc>=0.11.1",
    "rich>=14.1.0",
    "syrupy>=4.8.0",
    "types-requests>=2.32.0.20241016",
]
